--- a/kikiplay.html
+++ b/kikiplay.html
@@ -7,8 +7,8 @@
     <script src="./js/kikiplay.js"></script>
   </head>
   <body>
-    <h1 id="titleProyect" >kikiplay🔥💧🌱</h1>
-    <section id="selectPet">
+    <h1 id="titleProyect">kikiplay🔥💧🌱</h1>
+    <section id="selectPetPlayer">
       <h2>Elige tu mascota:</h2>
       <label for="hipodoge">Hipodoge</label>
       <input type="radio" name="mascota" id="hipodoge" />
@@ -17,11 +17,17 @@
       <label for="ratigueya">Ratigueya</label>
       <input type="radio" name="mascota" id="ratigueya" />
       <button id="selectButton">Seleccionar</button>
-      </section>
+    </section>
     <section id="selectAttack">
       <h2>Elige tu ataque:</h2>
-      <p>Tu mascota <span id= "petPlayer"></span> tiene <span id= "lifePetPlayer">3</span> vidas</p>
-      <p>Las mascota <span id= "petEnemy"></span> del enemigo tiene <span>3</span> vidas</p>
+      <p>
+        Tu mascota <span id="petPlayer"></span> tiene
+        <span id="lifePetPlayer">3</span> vidas
+      </p>
+      <p>
+        La mascota <span id="petEnemy"></span> del enemigo tiene
+        <span id="lifePetEnemy">3</span> vidas
+      </p>
       <p>
         <button id="buttonFire">Fuego 🔥</button>
         <button id="buttonWater">Agua 💧</button>
@@ -37,6 +43,5 @@
     <section id="reset">
       <button id="buttonReset">Reiniciar</button>
     </section>
-
   </body>
 </html>
