solucion de reto leccion 24 antes de ver el video yuju

--- a/kikiplay.html
+++ b/kikiplay.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1 id="titleProyect">kikiplay🔥💧🌱</h1>
-    <section id="selectPetPlayer">
+    <section id="selectPet">
       <h2>Elige tu mascota:</h2>
       <label for="hipodoge">Hipodoge</label>
       <input type="radio" name="mascota" id="hipodoge" />
@@ -16,7 +16,7 @@
       <input type="radio" name="mascota" id="capipepo" />
       <label for="ratigueya">Ratigueya</label>
       <input type="radio" name="mascota" id="ratigueya" />
-      <button id="selectButton">Seleccionar</button>
+      <button id="buttonSelect">Seleccionar</button>
     </section>
     <section id="selectAttack">
       <h2>Elige tu ataque:</h2>
@@ -36,8 +36,8 @@
     </section>
     <section id="messages">
       <p>
-        Tu mascota atacó con FUEGO, las mascota del enemigo atacó con TIERRA -
-        GANASTE 🎉
+        Tu mascota atacó con FUEGO, las mascota del enemigo atacó con
+        <span id="atackRandomEnemy"></span> - GANASTE 🎉
       </p>
     </section>
     <section id="reset">
