attack random enemy, print messege

--- a/kikiplay.html
+++ b/kikiplay.html
@@ -36,8 +36,8 @@
     </section>
     <section id="messages">
       <p>
-        Tu mascota atacó con FUEGO, las mascota del enemigo atacó con
-        <span id="atackRandomEnemy"></span> - GANASTE 🎉
+        Tu mascota atacó con <span id="attackPlayerView"></span>, la mascota del
+        enemigo atacó con <span id="atackRandomEnemy"></span> - GANASTE 🎉
       </p>
     </section>
     <section id="reset">
