--- a/kikiplay.html
+++ b/kikiplay.html
@@ -3,19 +3,26 @@
   <head>
     <meta charset="utf-8" />
     <title>kikiplay</title>
-    <link rel="stylesheet" href="css/estilos.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <script src="./js/kikiplay.js"></script>
   </head>
   <body>
     <h1 id="titleProyect">kikiplay🔥💧🌱</h1>
-    <section id="selectPet">
+    <p></p>
+    <section id="titleSelectPet">
       <h2>Elige tu mascota:</h2>
-      <label for="hipodoge">Hipodoge</label>
+    </section>
+    <section id="selectPet">
+      <div class="card"><h2>HIPODOGE</h2></div>
       <input type="radio" name="mascota" id="hipodoge" />
-      <label for="capipepo">Capipepo</label>
+      <div class="card"><h2>CAPIPEPO</h2></div>
       <input type="radio" name="mascota" id="capipepo" />
-      <label for="ratigueya">Ratigueya</label>
+      <div class="card"><h2>RARIGUEYA</h2></div>
       <input type="radio" name="mascota" id="ratigueya" />
+    </section>
+    <p></p>
+    <p></p>
+    <section id="sectionButtonSelect">
       <button id="buttonSelect">Seleccionar</button>
     </section>
     <section id="selectAttack">
