--- a/kikiplay.html
+++ b/kikiplay.html
@@ -7,19 +7,39 @@
     <script src="./js/kikiplay.js"></script>
   </head>
   <body>
-    <h1 id="titleProyect">kikiplay🔥💧🌱</h1>
+    <h1 id="titleProyect">KikiGame</h1>
     <p></p>
     <section id="titleSelectPet">
       <h2>Elige tu mascota:</h2>
     </section>
+
     <section id="selectPet">
-      <div class="card"><h2>HIPODOGE</h2></div>
-      <input type="radio" name="mascota" id="hipodoge" />
-      <div class="card"><h2>CAPIPEPO</h2></div>
-      <input type="radio" name="mascota" id="capipepo" />
-      <div class="card"><h2>RARIGUEYA</h2></div>
-      <input type="radio" name="mascota" id="ratigueya" />
+      <label>
+        <div class="card">
+          <div class="card-info">
+            <p class="title">HIPODOGE</p>
+          </div>
+        </div>
+        <input type="radio" name="mascota" id="hipodoge" />
+      </label>
+      <label>
+        <div class="card">
+          <div class="card-info">
+            <p class="title">CAPIPEPO</p>
+          </div>
+        </div>
+        <input type="radio" name="mascota" id="capipepo" />
+      </label>
+      <label>
+        <div class="card">
+          <div class="card-info">
+            <p class="title">RATIGUEYA</p>
+          </div>
+        </div>
+        <input type="radio" name="mascota" id="ratigueya" />
+      </label>
     </section>
+
     <p></p>
     <p></p>
     <section id="sectionButtonSelect">
