--- a/kikiplay.html
+++ b/kikiplay.html
@@ -43,8 +43,11 @@
     <p></p>
     <p></p>
     <section id="sectionButtonSelect">
-      <button id="buttonSelect">Seleccionar</button>
+      <button id="buttonSelect">
+        <span>PLAY NOW</span>
+      </button>
     </section>
+
     <section id="selectAttack">
       <h2>Elige tu ataque:</h2>
       <p>
@@ -61,9 +64,11 @@
         <button id="buttonEarth">Tierra 🌱</button>
       </p>
     </section>
+
     <section id="messages">
       <p></p>
     </section>
+
     <section id="reset">
       <button id="buttonReset">Reiniciar</button>
     </section>
