--- a/kikiplay.html
+++ b/kikiplay.html
@@ -9,7 +9,7 @@
   <body>
     <div id="mainSection">
       <h1 id="titleProyect">KikiGame</h1>
-      <p></p>
+
       <section id="titleSelectPet">
         <h2>Elige tu mascota:</h2>
       </section>
@@ -40,12 +40,14 @@
           <input type="radio" name="mascota" id="ratigueya" />
         </label>
       </section>
+      <p></p>
 
-      <p></p>
-      <p></p>
       <section id="sectionButtonSelect">
         <button id="buttonSelect">
-          <span>PLAY NOW</span>
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span> Continuar
         </button>
       </section>
 
@@ -60,23 +62,26 @@
           <span id="lifePetEnemy">3</span> vidas
         </p>
         <p id="buttonAtack">
-          <buttonF id="buttonFire" class="noselect">
-            <span class="text">Fuego</span
-            ><span class="icon"
-              ><svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
-                ></path></svg
-            ></span>
-          </buttonF>
+          <button id="buttonFire">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span> Fuergo
+          </button>
 
-          <buttonA id="buttonWater">Agua 💧</buttonA>
-          <buttonT id="buttonEarth">Tierra 🌱</buttonT>
+          <button id="buttonWater">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span> Agua
+          </button>
+
+          <button id="buttonEarth">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span> Tierra
+          </button>
         </p>
       </section>
 
