--- a/kikiplay.html
+++ b/kikiplay.html
@@ -78,6 +78,12 @@
         </p>
       </section>
 
+      <section id="mainMessages">
+        <div class="loader">
+          <span id="messageResult"></span>
+        </div>
+      </section>
+
       <section id="messages">
         <p></p>
       </section>
@@ -91,25 +97,13 @@
         </button>
       </section>
 
-      <section id="petLifeViewWeb">
-        <div>
-          <p>
-            tiene
-            <span id="lifePetPlayer">3</span> vidas
-          </p>
-          <p>
-            La mascota <span id="petEnemy"></span> del enemigo tiene
-            <span id="lifePetEnemy">3</span> vidas
-          </p>
-        </div>
-      </section>
-
       <section id="infoAttackView">
-        <div>
+        <label>
           <div class="card2">
             <div class="card-top">
               <p class="card__title"><span id="petPlayer"></span></p>
               <div class="rating">
+                <span id="lifePetPlayer">3</span>
                 <svg width="17" height="17" viewBox="0 0 17 17" fill="none">
                   <path
                     fill="#00B9AE"
@@ -122,17 +116,37 @@
               </div>
             </div>
             <div class="card__info">
-              <p class="episode__num">ATAQUE</p>
-              <p class="episode__type">Fantasy</p>
+              <p class="episode__num">Vidas</p>
+              <p class="episode__type">Ataque</p>
             </div>
             <div class="card__btns"></div>
           </div>
-        </div>
+        </label>
+        <label>
+          <div class="card2">
+            <div class="card-top">
+              <p class="card__title"><span id="petEnemy"></span></p>
+              <div class="rating">
+                <span id="lifePetEnemy">3</span>
+                <svg width="17" height="17" viewBox="0 0 17 17" fill="none">
+                  <path
+                    fill="#00B9AE"
+                    stroke="#00B9AE"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  ></path>
+                </svg>
+              </div>
+            </div>
+            <div class="card__info">
+              <p class="episode__num">Vidas</p>
+              <p class="episode__type">Ataque</p>
+            </div>
+            <div class="card__btns"></div>
+          </div>
+        </label>
       </section>
-      <p></p>
-      <p></p>
-      <p></p>
-      <p></p>
     </div>
   </body>
 </html>
