message result Dinamic

--- a/kikiplay.html
+++ b/kikiplay.html
@@ -104,16 +104,8 @@
               <p class="card__title"><span id="petPlayer"></span></p>
               <div class="rating">
                 <span id="lifePetPlayer">3</span>
-                <svg width="17" height="17" viewBox="0 0 17 17" fill="none">
-                  <path
-                    fill="#00B9AE"
-                    stroke="#00B9AE"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  ></path>
-                </svg>
               </div>
+              <div id="RD"><span id="ResultDinamic"></span></div>
             </div>
             <div class="card__info">
               <p class="episode__num">Vidas</p>
