tests in different paragraphs

--- a/kikiplay.html
+++ b/kikiplay.html
@@ -85,7 +85,7 @@
       </section>
 
       <section id="messages">
-        <p></p>
+        <div id="ResultDinamic"></div>
       </section>
 
       <section id="reset">
@@ -105,7 +105,7 @@
               <div class="rating">
                 <span id="lifePetPlayer">3</span>
               </div>
-              <div id="RD"><span id="ResultDinamic"></span></div>
+              <div id="viewAttackPlayerCard"></div>
             </div>
             <div class="card__info">
               <p class="episode__num">Vidas</p>
@@ -120,16 +120,8 @@
               <p class="card__title"><span id="petEnemy"></span></p>
               <div class="rating">
                 <span id="lifePetEnemy">3</span>
-                <svg width="17" height="17" viewBox="0 0 17 17" fill="none">
-                  <path
-                    fill="#00B9AE"
-                    stroke="#00B9AE"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  ></path>
-                </svg>
               </div>
+              <div id="viewAttackEnemyCard"></div>
             </div>
             <div class="card__info">
               <p class="episode__num">Vidas</p>
